# xgems

./: CMakeLists.txt  README.md  environment.devenv.yml
.github/workflows/: ci-build.yml
cmake/: xGEMSFindDeps.cmake
demos/: demo1-dict.cpp  demo1-dict.py  pyGEMS_test_bounds.py
docs/html/: cpp_api_reference.html  genindex.html  index.html  objects.inv  python_api_reference.html  python_dicts_api_reference.html  search.html  searchindex.js
docs/html/.doctrees/: cpp_api_reference.doctree  environment.pickle  index.doctree  python_api_reference.doctree  python_dicts_api_reference.doctree
docs/html/_modules/: index.html
python/: pyproject.toml.in
python/PyxGEMS/: pyxdGEMS.hpp
python/src/xgems/: __init__.py  pyxGEMS.cpp  pyxGEMS.hpp
python/xGEMS/: CMakeLists.txt
python2/: CMakeLists.txt  pyproject.toml.in
python2/src/xgems/: CMakeLists.txt
tests/: CMakeLists.txt
xGEMS/: ChemicalEngineMaps.cpp  ChemicalEngineMaps.hpp
